@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<cd:ProductClass xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" name="GEOMS" last-modified="2018-11-28">
+<cd:ProductClass xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" name="GEOMS" last-modified="2020-02-06">
   <cd:Description>Products using the Generic Earth Observation Metadata Standard (GEOMS)</cd:Description>
   <!-- version numbers are a combination of base format and template version: <format> + <version>
        format: hdf4=1000, hdf5=2000, netcdf3=3000 (netcdf4 is treated as hdf5) -->
@@ -147,6 +147,9 @@
       <cd:Description>The format definition for this product is taken from the HDF5 file itself.</cd:Description>
       <cd:DetectionRule>
         <cd:MatchExpression path="/@DATA_TEMPLATE">str(.) == "GEOMS-TE-PANDORA-DIRECTSUN-GAS-002"</cd:MatchExpression>
+      </cd:DetectionRule>
+      <cd:DetectionRule>
+        <cd:MatchExpression path="/@DATA_TEMPLATE">str(.,35) == "GEOMS-TE-PANDORA-DIRECTSUN-GAS-002\000"</cd:MatchExpression>
       </cd:DetectionRule>
     </cd:ProductDefinition>
   </cd:ProductType>
